# llm-course

./: .gitignore  AGENTS.md  README.md  environment.txt  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
data/: animals.txt  minecraft.txt  space.txt
llm_course/: __init__.py  lesson1.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lesson6.py
notebooks/: L0_Python_Foundations.ipynb  L1_Tokens_and_Tokenizers.ipynb  L2_Embeddings_and_Similarity.ipynb  L3_Ngram_Language_Models.ipynb  L4_Tiny_Transformer_From_Scratch.ipynb  L5_Finetune_with_HuggingFace.ipynb  L6_Evaluation_Prompting_Safety.ipynb
slides/: L1_Tokens_and_Tokenizers.md  L2_Embeddings_and_Similarity.md  L3_Ngram_Language_Models.md  L4_Tiny_Transformer_From_Scratch.md  L5_Finetune_with_HuggingFace.md  L6_Evaluation_Prompting_Safety.md
tests/: conftest.py  test_installation.py  test_lesson1.py  test_lesson2.py  test_lesson3.py  test_lesson4.py  test_lesson5.py  test_lesson6.py  test_notebooks_render.py
