[project]
name = "llm-course"
version = "0.1.0"
description = "3-Week LLM Course (6 Lessons) — Kids Edition (Advanced)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "LLM Course Maintainers" }
]
dependencies = [
    "accelerate",
    "datasets",
    "ipywidgets",
    "jupyterlab",
    "matplotlib",
    "nbconvert>=7.16.6",
    "nbformat",
    "numpy",
    "torch",
    "transformers",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_course*"]

[tool.uv]
